Change python file in action

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run Script
         run: |
-          python your_script.py  # Remplacez "your_script.py" par le nom de votre script
+          python convert_to_sql.py  # Remplacez "your_script.py" par le nom de votre script
