--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,6 +41,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ env.NEW_TAG }}
           release_name: "Release ${{ env.NEW_TAG }}"
           body: "This release contains the generated file."
