--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,8 +40,9 @@ jobs:
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        with:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
           tag_name: ${{ env.NEW_TAG }}
           release_name: "Release ${{ env.NEW_TAG }}"
           body: "This release contains the generated file."
