--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Upload File to Release
         uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./insert_data.sql # Chemin vers le fichier généré
