--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main # Déclenche l'action uniquement sur la branche "main" (modifiable selon vos besoins)
-    tags:
-      - v*
 
 jobs:
   run-script:
@@ -24,14 +22,29 @@ jobs:
         run: |
           python convert_to_sql.py  # Remplacez "your_script.py" par le nom de votre script
 
+      - name: Get next version
+        id: get_next_version
+        run: |
+          LATEST_TAG=$(git describe --tags $(git rev-list --tags --max-count=1) 2>/dev/null || echo "0.0.0")
+          echo "Latest tag: $LATEST_TAG"
+
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+
+          PATCH=$((PATCH + 1))
+          NEXT_VERSION="$MAJOR.$MINOR.$PATCH"
+          echo "Next version: $NEXT_VERSION"
+
+          # Sortie de la version
+          echo "next_version=$NEXT_VERSION" >> $GITHUB_ENV
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: "Release ${{ github.ref }}"
+          tag_name: ${{ env.next_version }}
+          release_name: Release ${{ env.next_version }}
           body: "This release contains the generated file."
           draft: false
           prerelease: false
