--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,6 +22,13 @@ jobs:
         run: |
           python convert_to_sql.py  # Remplacez "your_script.py" par le nom de votre script
 
+      - name: Debug tags
+        run: |
+          echo "All tags in the repository:"
+          git tag
+          echo "Latest tag based on git describe:"
+          git describe --tags $(git rev-list --tags --max-count=1) || echo "No tags found"
+
       - name: Get next version
         id: get_next_version
         run: |
