--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3 # Clone le dépôt
+        with:
+          fetch-depth: 0 # Assure la récupération des tags
 
       - name: Set up Python
         uses: actions/setup-python@v4
