--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,5 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ env.sql_file }}
+          asset_path: ./insert_data.sql
           asset_name: database.sql
           asset_content_type: application/sql
