Change action creating releases

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,22 +41,24 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
+        # env:
+        #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.next_version }}
-          release_name: Release ${{ env.next_version }}
+          name: "Release ${{ env.next_version }}"
           body: "This release contains the generated file."
-          draft: false
+          tag_name: ${{ env.next_version }}
+          files: ${{ env.sql_file }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: false
+          draft: false
 
-      - name: Upload File to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ env.sql_file }}
-          asset_path: ./insert_data.sql
-          asset_name: database.sql
-          asset_content_type: application/sql
+      # - name: Upload File to Release
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ env.sql_file }}
+      #     asset_path: ./insert_data.sql
+      #     asset_name: database.sql
+      #     asset_content_type: application/sql
